now resetting the field sende_nachricht_nach_extern in the ticket after sending
