# ticketing-eventing/mail-handler-service/src/main/java/de/muenchen/oss/dbs/ticketing/eventing/mailhandler/application/usecase/EventHandlingUseCase.java
@@ -4,19 +4,19 @@ import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import de.muenchen.oss.dbs.ticketing.eai.client.model.ArticleAttachment;
 import de.muenchen.oss.dbs.ticketing.eai.client.model.ArticleInternal;
 import de.muenchen.oss.dbs.ticketing.eai.client.model.TicketInternal;
+import de.muenchen.oss.dbs.ticketing.eai.client.model.UpdateTicketDTO;
 import de.muenchen.oss.dbs.ticketing.eventing.handlercore.application.port.in.EventHandlerInPort;
 import de.muenchen.oss.dbs.ticketing.eventing.handlercore.application.port.out.TicketingOutPort;
 import de.muenchen.oss.dbs.ticketing.eventing.handlercore.domain.model.Event;
-import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.adapter.out.mail.Mail;
+import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.adapter.out.mail.MailMessage;
 import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.application.port.out.SendMailOutPort;
 import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.config.MailHandlerProperties;
+import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.exceptions.NoValidArticleException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.stream.Collectors;
-
-import de.muenchen.oss.dbs.ticketing.eventing.mailhandler.exceptions.NoValidArticleException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
@@ -62,6 +62,9 @@ public class EventHandlingUseCase implements EventHandlerInPort {
             final ArticleInternal article = findRelevantArticle(ticket);
             sendMail(ticket, form, article);
 
+            //reset flag sende_nachricht_nach_extern
+            resetTicket(ticket);
+
             log.info("Event handled successfully");
         } catch (NoValidArticleException e) {
             log.error(e.getMessage());
@@ -74,17 +77,16 @@ public class EventHandlingUseCase implements EventHandlerInPort {
         return
         // state was changed by trigger send-to-postbox
         mailHandlerProperties.getTicketChangeAction().equals(event.action()) &&
-                // is relevant anliegen
+        // is relevant anliegen
                 mailHandlerProperties.getRelevantTicketTypes().contains(event.anliegenart()) &&
                 // user does have an lhmExtId (i.e. BayernID or BundID user)
                 event.lhmExtId() != null && !event.lhmExtId().isEmpty();
     }
 
-    private boolean isRelevantTicket(TicketInternal ticket) {
+    private boolean isRelevantTicket(final TicketInternal ticket) {
         log.debug("Checking value of sende_nachricht_nach_extern: " + ticket.getSendeNachrichtNachExtern());
-       return TO_POSTBOX_DEFAULT.equals(ticket.getSendeNachrichtNachExtern()) || TO_POSTBOX_HIGH.equals(ticket.getSendeNachrichtNachExtern());
+        return TO_POSTBOX_DEFAULT.equals(ticket.getSendeNachrichtNachExtern()) || TO_POSTBOX_HIGH.equals(ticket.getSendeNachrichtNachExtern());
     }
-
 
     private ArticleInternal findRelevantArticle(final TicketInternal ticket) throws NoValidArticleException {
         assert ticket.getArticles() != null;
@@ -96,18 +98,18 @@ public class EventHandlingUseCase implements EventHandlerInPort {
                 .orElseThrow(() -> new NoValidArticleException("no valid article found in ticket " + ticket.getId()));
     }
 
-    private void sendMail(TicketInternal ticket, Map<String, Object> form, ArticleInternal article) {
+    private void sendMail(final TicketInternal ticket, final Map<String, Object> form, final ArticleInternal article) {
         final String recipient = mailHandlerProperties.getRecipient();
         final String subject = buildSubject(ticket, form);
         log.debug("Created subject: " + subject);
         final String body = buildBody(article);
         log.debug("Created body: " + body);
         final Map<String, InputStream> attachments = buildAttachments(article);
-        sendMailOutport.sendMail(new Mail(recipient, subject, body, attachments));
+        sendMailOutport.sendMail(new MailMessage(recipient, subject, body, attachments));
     }
 
     private String buildSubject(final TicketInternal ticket, final Map<String, Object> form) {
-        String authlevel;
+        final String authlevel;
         if (form.get(TICKETING_VERTRAUENSNIVEAU) == null) {
             log.error("no ticketingVertrauensniveau found in ticket " + ticket.getId() + " - setting level1");
             authlevel = "level1";
@@ -123,7 +125,6 @@ public class EventHandlingUseCase implements EventHandlerInPort {
                         "Zammad-Eventing",
                         ticket.getTitle());
     }
-
 
     private String buildBody(final ArticleInternal article) {
         return article.getBody();
@@ -161,5 +162,13 @@ public class EventHandlingUseCase implements EventHandlerInPort {
         } catch (final IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    private void resetTicket(final TicketInternal ticket) {
+        final UpdateTicketDTO updateTicketDTO = new UpdateTicketDTO();
+        updateTicketDTO.setId(ticket.getId());
+        updateTicketDTO.setDirektkennwort(ticket.getDirektkennwort());
+        updateTicketDTO.setSendeNachrichtNachExtern(null);
+        ticketingOutPort.updateTicket(updateTicketDTO);
     }
 }
